--- a/index.html
+++ b/index.html
@@ -32,7 +32,39 @@
     </header>
 
 
-    <main id="site_main"></main>
+    <main id="site_main">
+        <div class="conteiner">
+          <div class="shop_row">
+
+            <div class="prodotto_1">
+                <img class="articolo" src="/img/1.webp" alt="">
+                <span class="sconto">-50%</span>
+                <span class="sostenibilità">Sostenibilità</span>
+
+            </div>
+
+            <div class="prodotto_1">
+                <img class="articolo" src="/img/2.webp" alt="">
+                   <span class="sconto">-50%</span>
+                  <span class="sostenibilità">Sostenibilità</span>
+
+            </div>
+
+            <div class="prodotto_1">
+                <img class="articolo" src="/img/3.webp" alt="">
+                    <span class="sconto">-50%</span>
+                    <span class="sostenibilità">Sostenibilità</span>
+
+            </div>
+
+          </div>
+        </div>
+        
+        
+
+    </main>
+
+
     <footer id="site_footer"></footer>
 
 
