--- a/index.html
+++ b/index.html
@@ -38,22 +38,60 @@
 
             <div class="prodotto_1">
                 <img class="articolo" src="/img/1.webp" alt="">
+                <!-- <img class="articolo_1" src="/img/1b.webp" alt=""> -->
                 <span class="sconto">-50%</span>
                 <span class="sostenibilità">Sostenibilità</span>
-
+                <span class="heart">&hearts;</span>
+                <h7 class="decription">Levi's</h7>
+                <h5 class="">RELAXED FIT TEE UNISEX</h5>
+                <span></span>
             </div>
 
             <div class="prodotto_1">
                 <img class="articolo" src="/img/2.webp" alt="">
-                   <span class="sconto">-50%</span>
-                  <span class="sostenibilità">Sostenibilità</span>
+                   <span class="sconto">-30%</span>
+                   <span class="heart">&hearts;</span>
+                   <h7 class="decription">Guess</h7>
+
 
             </div>
 
             <div class="prodotto_1">
                 <img class="articolo" src="/img/3.webp" alt="">
-                    <span class="sconto">-50%</span>
+                <!-- <img class="articolo" src="/img/3b.webp" alt=""> -->
+                    <span class="sconto">-30%</span>
                     <span class="sostenibilità">Sostenibilità</span>
+                    <span class="heart">&hearts;</span>
+                    <h7 class="decription">Come Zucchero Filato</h7>
+
+
+            </div>
+            <div class="prodotto_1">
+                <img class="articolo" src="/img/4.webp" alt="">
+                <!-- <img class="articolo" src="/img/4b.webp" alt=""> -->
+                <span class="sconto">-50%</span>
+                <span class="sostenibilità">Sostenibilità</span>
+                <span class="heart">&hearts;</span>
+                <h7 class="decription">Levi's</h7>
+
+            </div>
+
+            <div class="prodotto_1">
+                <img class="articolo" src="/img/5.webp" alt="">
+                <!-- <img class="articolo" src="/img/5b.webp" alt=""> -->
+                <span class="heart">&hearts;</span>
+                <h7 class="decription">Mava Doluva</h7>
+
+
+            </div>
+
+            <div class="prodotto_1">
+                <img class="articolo" class="articolo" src="/img/6.webp" alt="">
+                <!-- <img src="/img/6b.webp" alt=""> -->
+                    <span class="sostenibilità_only">Sostenibilità</span>
+                    <span class="heart">&hearts;</span>
+                    <h7 class="decription">Esprit</h7>
+
 
             </div>
 
@@ -65,7 +103,32 @@
     </main>
 
 
-    <footer id="site_footer"></footer>
+    <footer id="site_footer">
+        <div class="conteiner">
+            <div class="row">
+                <div class="col_4">
+                    <h5 class="footer_info">Boolando s.r.l</h5>
+                    <span>Informazioni legali normativa sulla privacv Diritto di recesso</span>
+                </div>
+                <div class="col_2">
+                </div>
+                <div class="col_6">
+                    <h6>Trovaci anche su</h6>
+                    <br>
+                    <div>
+                    <img class="symbol" src="/img/twitter.svg" alt="">
+                    <img class="symbol" src="/img/facebook.svg" alt="">
+                    <img class="symbol" src="/img/instagram.svg" alt="">
+                    <img class="symbol" src="/img/pinterest.svg" alt="">
+                    <img class="symbol" src="/img/youtube.svg" alt="">
+                </div>
+
+                </div>
+            </div>
+      </div>
+
+
+    </footer>
 
 
 </body>
