--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 <span class="sostenibilità">Sostenibilità</span>
                 <span class="heart">&hearts;</span>
                 <h7 class="decription">Levi's</h7>
-                <h5 class="">RELAXED FIT TEE UNISEX</h5>
-                <span></span>
+                <h5 class="decription_1">RELAXED FIT TEE UNISEX</h5>
+                <span class="price"><strong>14.99 € </strong> <p>29:90€</p></span>
             </div>
 
             <div class="prodotto_1">
@@ -52,6 +52,9 @@
                    <span class="sconto">-30%</span>
                    <span class="heart">&hearts;</span>
                    <h7 class="decription">Guess</h7>
+                   <h5 class="decription_1">ROSES TEEX</h5>
+                   <span class="price"><strong>20,99 € </strong> <p>29:90€</p></span>
+
 
 
             </div>
@@ -63,6 +66,8 @@
                     <span class="sostenibilità">Sostenibilità</span>
                     <span class="heart">&hearts;</span>
                     <h7 class="decription">Come Zucchero Filato</h7>
+                    <h5 class="decription_1">VOGLIA DI COLORI PA STELLO</h5>
+                    <span class="price"><strong>129,99 €  </strong> <p>184,99 €</p></span>
 
 
             </div>
@@ -73,6 +78,8 @@
                 <span class="sostenibilità">Sostenibilità</span>
                 <span class="heart">&hearts;</span>
                 <h7 class="decription">Levi's</h7>
+                <h5 class="decription_1">TEE UNISEY</h5>
+                <span class="price"><strong>14.99 € </strong> <p>29:90€</p> </span>
 
             </div>
 
@@ -81,7 +88,8 @@
                 <!-- <img class="articolo" src="/img/5b.webp" alt=""> -->
                 <span class="heart">&hearts;</span>
                 <h7 class="decription">Mava Doluva</h7>
-
+                <h5 class="decription_1">STRIPE RODICE</h5>
+                <span class="price"><strong>99,99 </strong></span>
 
             </div>
 
@@ -91,6 +99,8 @@
                     <span class="sostenibilità_only">Sostenibilità</span>
                     <span class="heart">&hearts;</span>
                     <h7 class="decription">Esprit</h7>
+                    <h5 class="decription_1">MAGLIONE-BLACK</h5>
+                    <span class="price"><strong>29.99 € </strong></span>
 
 
             </div>
