--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
           <div class="shop_row">
 
             <div class="prodotto_1">
+                <img class="articolo_1" src="/img/1b.webp" alt="">
                 <img class="articolo" src="/img/1.webp" alt="">
-                <!-- <img class="articolo_1" src="/img/1b.webp" alt=""> -->
+                
                 <span class="sconto">-50%</span>
                 <span class="sostenibilità">Sostenibilità</span>
                 <span class="heart">&hearts;</span>
@@ -48,6 +49,8 @@
             </div>
 
             <div class="prodotto_1">
+                <img class="articolo_1" src="/img/2b.webp" alt="">
+
                 <img class="articolo" src="/img/2.webp" alt="">
                    <span class="sconto">-30%</span>
                    <span class="heart">&hearts;</span>
@@ -60,8 +63,9 @@
             </div>
 
             <div class="prodotto_1">
+                <img class="articolo_1" src="/img/3b.webp" alt="">
+
                 <img class="articolo" src="/img/3.webp" alt="">
-                <!-- <img class="articolo" src="/img/3b.webp" alt=""> -->
                     <span class="sconto">-30%</span>
                     <span class="sostenibilità">Sostenibilità</span>
                     <span class="heart">&hearts;</span>
@@ -72,8 +76,8 @@
 
             </div>
             <div class="prodotto_1">
+                <img class="articolo_1" src="/img/4b.webp" alt="">
                 <img class="articolo" src="/img/4.webp" alt="">
-                <!-- <img class="articolo" src="/img/4b.webp" alt=""> -->
                 <span class="sconto">-50%</span>
                 <span class="sostenibilità">Sostenibilità</span>
                 <span class="heart">&hearts;</span>
@@ -84,8 +88,9 @@
             </div>
 
             <div class="prodotto_1">
+                <img class="articolo_1" src="/img/5b.webp" alt="">
+
                 <img class="articolo" src="/img/5.webp" alt="">
-                <!-- <img class="articolo" src="/img/5b.webp" alt=""> -->
                 <span class="heart">&hearts;</span>
                 <h7 class="decription">Mava Doluva</h7>
                 <h5 class="decription_1">STRIPE RODICE</h5>
@@ -94,8 +99,9 @@
             </div>
 
             <div class="prodotto_1">
+                <img class="articolo_1" src="/img/6b.webp" alt="">
+
                 <img class="articolo" class="articolo" src="/img/6.webp" alt="">
-                <!-- <img src="/img/6b.webp" alt=""> -->
                     <span class="sostenibilità_only">Sostenibilità</span>
                     <span class="heart">&hearts;</span>
                     <h7 class="decription">Esprit</h7>
