--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
                     <img class="logo" src="/img/boolean-logo.png" alt="">
                   </div>
                   <div class="col_3">
-                    <img class="symbol" src="/img/user-solid.svg" alt="">
+                    <img class="symbol_1" src="/img/user-solid.svg" alt="">
                     &hearts;
-                   <i class="fa-solid fa-bag-shopping"></i>
+                    <img class="symbol_1" src="/img/bag-shopping-solid.svg" alt="">
+                   
                   </div>
               </div>
         </div>
